# bryllup

./: credentials.json  flag.txt  generate_qr.py  main.py  pyproject.toml  requirements.txt  test.py.txt  testing.json
.streamlit/: config.toml
